--- a/geo-notebook.rmd
+++ b/geo-notebook.rmd
@@ -5,7 +5,7 @@ knit: (function(input_file, encoding) {
         rmarkdown::render(input_file,
                 encoding=encoding,
                 output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
-author: "AbuKamaal"
+author: "Waleed Khan"
 date: '2022-09-01'
 output: html_document
 ---
